# internal/championship/infrastructure/database/mysql/repository/championship.go
@@ -25,3 +25,28 @@ func (r ChampionshipMySQLRepo) GetChampionships() (domain.Championships, error) 
 
 	return championships.ToEntity(), nil
 }
+
+func (r ChampionshipMySQLRepo) GetChampionship(id string) (domain.Championship, error) {
+	var championship mysql.Championship
+	tx := r.conn.Where("id = ?", id).First(&championship)
+
+	if tx.Error == gorm.ErrRecordNotFound {
+		return domain.Championship{}, domain.ErrChampionshipNotFound
+	}
+	if tx.Error != nil {
+		return domain.Championship{}, tx.Error
+	}
+
+	return championship.ToEntity(), nil
+}
+
+func (c ChampionshipMySQLRepo) CreateChampionship(dc domain.Championship) (domain.Championship, error) {
+	championship := mysql.NewChampionship(dc)
+	tx := c.conn.Create(&championship)
+
+	if tx.Error != nil {
+		return domain.Championship{}, tx.Error
+	}
+
+	return championship.ToEntity(), nil
+}
